first html structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
     <title>Slider</title>
 </head>
 <body>
-    <div id="app">{{ message }}</div>
+    <div id="app">
+        <h1>Slider</h1>
+
+        <div class="container">
+            <div class="card">
+                <img src="" alt="">
+            </div>
+            <div class="thumbnails">
+                <img src="" alt="">
+            </div>
+            <nav>
+                <button>
+                    <i class="fa-solid fa-circle-chevron-left"></i>
+                </button>
+                <button>
+                    <i class="fa-solid fa-circle-chevron-right"></i>
+                </button>
+            </nav>
+            <div class="card-body">
+                <h3></h3>
+                <p class="description"></p>
+            </div>
+
+        </div>
+    </div>
 
 
 
