--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
 </head>
 <body>
     <div id="app">
-        <h1>Slider</h1>
+        <h1 class="text-center">Slider</h1>
 
-        <div class="container">
+        <div class="container-xs position-relative">
             <div class="card">
+                <img src="./assets/img/01.webp" alt="">
+            </div>
+            <div class="card-body position-absolute">
+                    <h3></h3>
+                    <p class="description"></p>    
+            </div>
+            <div class="thumbnails ">
                 <img src="" alt="">
             </div>
-            <div class="thumbnails">
-                <img src="" alt="">
-            </div>
-            <nav>
-                <button>
+            <nav class="d-flex justify-content-between">
+                <button class="rounded-5">
                     <i class="fa-solid fa-circle-chevron-left"></i>
                 </button>
-                <button>
+                <button class="rounded-5">
                     <i class="fa-solid fa-circle-chevron-right"></i>
                 </button>
             </nav>
-            <div class="card-body">
-                <h3></h3>
-                <p class="description"></p>
-            </div>
+           
 
         </div>
     </div>
