--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 
         <h1 class="text-center">Slider</h1>
 
-        <div class="container-xs position-relative">
-            <div class="card">
+        <div class="container-xs">
+            <div class="card position-relative">
                 <img :src="posters[activeImage].image" alt="">
-            </div>
-            <div class="card-body position-absolute">
+                <div class="card-body position-absolute">
                     <h3>{{posters[activeImage].title}}</h3>
                     <p>{{posters[activeImage].description}}</p>    
+                </div>
             </div>
             <div class="thumbnails">
                 <img class="" :class="index === activeImage ? 'active' : ''" :src="image.image" alt=""
                 v-for="(image, index) in posters">
             </div>
             <nav class="d-flex justify-content-between">
-                <button class="rounded-5">
+                <button @click="prev" class="rounded-5">
                     <i class="fa-solid fa-circle-chevron-left"></i>
                 </button>
-                <button class="rounded-5">
+                <button @click="next" class="rounded-5">
                     <i class="fa-solid fa-circle-chevron-right"></i>
                 </button>
             </nav>
