--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="text-center">Slider</h1>
 
         <div class="container-xs">
-            <div class="card position-relative">
+            <div class="card position-relative" @mouseover="stopImg" @mouseleave="autoplay">
                 <img :src="posters[activeImage].image" alt="">
                 <div class="card-body position-absolute">
                     <h3>{{posters[activeImage].title}}</h3>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="thumbnails">
-                <img class="" :class="index === activeImage ? 'active' : ''" :src="image.image" alt=""
+                <img :class="index === activeImage ? 'active' : ''" :src="image.image" alt=""
                 v-for="(image, index) in posters">
             </div>
             <nav class="d-flex justify-content-between">
